# sloth-raytracer

./: .gitignore  CMakeLists.txt  README.md  geometry.h  image.cpp  image.h  main.cpp  scene.cpp  scene.h
data/: test_scene.json
src/image/: color.h  image.cpp  image.h
src/main/: main.cpp
src/raytracing_engine/: raytracing_engine.cpp  raytracing_engine.h
src/scene/: camera.h  scene.cpp  scene.h
